--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -1,7 +1,4 @@
 .Youtube {
-  figure {
-    background: lightgoldenrodyellow;
-  }
   article {
     &:nth-of-type(1) {
       width: 100%;
@@ -98,7 +95,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      filter: brightness(0.7);
+      filter: brightness(0.9);
     }
   }
   .txt {
@@ -155,6 +152,20 @@
       width: 50%;
     }
   }
+
+  .sub_img {
+    .img_con {
+      height: 300px;
+      padding-left: 20%;
+    }
+    .txt {
+      width: 60%;
+      p {
+        font: 50px/1.3 'playfair display';
+        font-weight: 700;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $mobile) {
@@ -191,6 +202,28 @@
         span {
           font: 12px/1 'noto sans';
           font-weight: 100;
+        }
+      }
+    }
+  }
+  .sub_img {
+    .img_con {
+      height: 300px;
+      padding-left: 0;
+    }
+    .txt {
+      width: 100%;
+      p {
+        font: 34px/1.3 'playfair display';
+        font-weight: 700;
+        color: #fff;
+      }
+      span {
+        font: 12px/1.5 'roboto';
+        color: #fff;
+        padding-right: 5%;
+        &::before {
+          width: 15vw;
         }
       }
     }
