서브-유투브, 멤버스 페이지 스크롤 효과 적용

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -210,6 +210,8 @@ header {
       background: #efefef;
       .inner {
         min-height: 80px;
+        width: 100%;
+        overflow: hidden;
         h1 {
           top: 15px;
           left: 50%;
