--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -2,13 +2,31 @@
   width: 1180px;
   margin: 0 auto;
   position: relative;
+  &.on {
+    figure {
+      transform: translateX(-50%) translateY(0px);
+      opacity: 0.9;
+      &::before {
+        left: -40%;
+        transition-delay: 0.2s;
+        opacity: 1;
+      }
+      &::after {
+        right: -40%;
+        transition-delay: 0.4s;
+        opacity: 1;
+      }
+    }
+  }
   figure {
     width: 650px;
     height: 350px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(100px);
     margin: 140px 0;
-    opacity: 0.9;
+    opacity: 0;
+    transition: 0.5s;
+    // position: relative;
     &::before {
       content: 'We are';
       display: block;
@@ -19,7 +37,9 @@
       position: absolute;
       z-index: 1;
       top: -130px;
-      left: -40%;
+      left: -70%;
+      transition: 0.5s;
+      opacity: 0;
     }
     &::after {
       content: 'The team';
@@ -30,7 +50,9 @@
       position: absolute;
       z-index: 1;
       bottom: -90px;
-      right: -40%;
+      right: -70%;
+      transition: 0.5s;
+      opacity: 0;
     }
   }
   > .inner {
@@ -42,180 +64,215 @@
       display: block;
       clear: both;
     }
-    .intro_container {
-      width: 100%;
-      background: #fef7f4;
-      position: relative;
-      &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 20%;
-        height: 100%;
-        left: -20%;
-        background: #fef7f4;
-      }
-      &::after {
-        content: '';
-        display: block;
-        position: absolute;
-        width: 20%;
-        height: 100%;
-        top: 0;
-        right: -20%;
-        background: #fef7f4;
-      }
-      .wrap {
+    .department_scroll {
+      .intro_container {
         width: 100%;
-        display: flex;
+        background: #fef7f4;
         position: relative;
-        .item {
-          width: 33.33333%;
-          padding: 150px 50px 100px 0;
+        &.on {
+          .wrap {
+            .item {
+              opacity: 1;
+              transform: translateY(0);
+              @for $i from 0 to 3 {
+                &:nth-of-type(#{$i + 1}) {
+                  transition-delay: 0.2s * $i;
+                }
+              }
+            }
+          }
+        }
+        &::before {
+          content: '';
+          display: block;
+          position: absolute;
+          width: 20%;
+          height: 100%;
+          left: -20%;
+          background: #fef7f4;
+        }
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          width: 20%;
+          height: 100%;
+          top: 0;
+          right: -20%;
+          background: #fef7f4;
+        }
+        .wrap {
+          width: 100%;
+          display: flex;
           position: relative;
-          span {
-            color: #fc8276;
-            position: absolute;
-            top: 50%;
-            right: 50px;
-            transform: translateY(-60%);
-            font: 200px/1 'playfair display';
-            letter-spacing: 2px;
-            opacity: 0.1;
-          }
-          > h3 {
-            font: 22px/1 'playfair display';
-            letter-spacing: 1.1px;
-            font-weight: 700;
-            color: #000;
-            margin-bottom: 50px;
+          .item {
+            width: 33.33333%;
+            padding: 150px 50px 100px 0;
             position: relative;
-            &::before {
-              content: '+';
-              display: block;
-              position: absolute;
-              bottom: 40px;
-              width: 50px;
-              height: 50px;
-              line-height: 50px;
-              text-align: center;
-              background: #fff;
-              border-radius: 50%;
-              box-shadow: 0 0 15px 5px rgba(252, 130, 118, 0.1);
-            }
-            &:hover {
+            transform: translateY(100px);
+            opacity: 0;
+            transition: 0.5s;
+
+            span {
               color: #fc8276;
-              cursor: pointer;
-            }
-          }
-          p {
-            width: 70%;
-            float: right;
-            letter-spacing: 1.2px;
-            font: 14px/1.8 'roboto';
-            font-weight: 100;
-            color: #878787;
-            &::before {
-              content: '';
-              display: block;
               position: absolute;
-              width: 20%;
-              height: 1.5px;
-              background: #000;
-              left: 0;
+              top: 50%;
+              right: 50px;
+              transform: translateY(-60%);
+              font: 200px/1 'playfair display';
+              letter-spacing: 2px;
+              opacity: 0.1;
+            }
+            > h3 {
+              font: 22px/1 'playfair display';
+              letter-spacing: 1.1px;
+              font-weight: 700;
+              color: #000;
+              margin-bottom: 50px;
+              position: relative;
+              &::before {
+                content: '+';
+                display: block;
+                position: absolute;
+                bottom: 40px;
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+                text-align: center;
+                background: #fff;
+                border-radius: 50%;
+                box-shadow: 0 0 15px 5px rgba(252, 130, 118, 0.1);
+              }
+              &:hover {
+                color: #fc8276;
+                cursor: pointer;
+              }
+            }
+            p {
+              width: 70%;
+              float: right;
+              letter-spacing: 1.2px;
+              font: 14px/1.8 'roboto';
+              font-weight: 100;
+              color: #878787;
+              &::before {
+                content: '';
+                display: block;
+                position: absolute;
+                width: 20%;
+                height: 1.5px;
+                background: #000;
+                left: 0;
+              }
             }
           }
         }
       }
-    }
-    .member_intro {
-      margin-top: 150px;
-      > p {
-        font: 15px/1 'roboto';
-        font-weight: 100;
-        color: #878787;
-        text-align: center;
-        margin-bottom: 40px;
-      }
-      > h2 {
-        font: 75px/1 'Playfair Display';
-        color: #000;
-        font-weight: 700;
-        text-align: center;
-        margin-bottom: 70px;
-      }
-      article {
-        width: 33.3333%;
-        float: left;
-        padding: 10px;
-        margin-bottom: 100px;
-        > .inner {
-          width: 100%;
-          position: relative;
-          display: flex;
-          overflow: hidden;
-          > .pic {
-            width: 90%;
-            height: 300px;
-            filter: saturate(0.2);
+      .member_intro {
+        margin-top: 150px;
+        > p {
+          font: 15px/1 'roboto';
+          font-weight: 100;
+          color: #878787;
+          text-align: center;
+          margin-bottom: 40px;
+        }
+        > h2 {
+          font: 75px/1 'Playfair Display';
+          color: #000;
+          font-weight: 700;
+          text-align: center;
+          margin-bottom: 70px;
+        }
+        .article_wrap {
+          &.on {
+            article {
+              transform: translateY(0px);
+              opacity: 1;
+              @for $i from 0 to 6 {
+                &:nth-of-type(#{$i + 1}) {
+                  transition-delay: 0.2s * $i;
+                }
+              }
+            }
+          }
+          article {
+            width: 33.3333%;
+            float: left;
+            padding: 10px;
+            margin-bottom: 100px;
+            transform: translateY(100px);
+            opacity: 0;
             transition: 0.5s;
-            cursor: pointer;
-            &:hover {
-              filter: saturate(1.1);
-              transform: scale(1.05);
-            }
-            img {
+            > .inner {
               width: 100%;
-              height: 100%;
-              object-fit: cover;
-              margin-left: 10%;
-            }
-          }
-          > .txt {
-            position: absolute;
-            bottom: 0;
-            left: 20px;
-            display: flex;
-            transform-origin: bottom left;
-            transform: rotate(-90deg);
-            h3 {
-              font: 22px/1 'Playfair Display';
-              font-weight: 700;
-              color: #000;
-              display: inline-block;
-              padding-right: 10px;
-            }
-            > p {
-              font: 14px/1 'roboto';
-              font-weight: 100;
-              color: #878787;
-              display: inline-block;
-              padding-left: 20px;
-              padding-top: 8px;
               position: relative;
-              &::before {
-                content: '/';
-                display: block;
+              display: flex;
+              overflow: hidden;
+              > .pic {
+                width: 90%;
+                height: 300px;
+                filter: saturate(0.2);
+                transition: 0.5s;
+                cursor: pointer;
+                &:hover {
+                  filter: saturate(1.1);
+                  transform: scale(1.05);
+                }
+                img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  margin-left: 10%;
+                }
+              }
+              > .txt {
                 position: absolute;
-                left: 5px;
+                bottom: 0;
+                left: 20px;
+                display: flex;
+                transform-origin: bottom left;
+                transform: rotate(-90deg);
+                h3 {
+                  font: 22px/1 'Playfair Display';
+                  font-weight: 700;
+                  color: #000;
+                  display: inline-block;
+                  padding-right: 10px;
+                }
+                > p {
+                  font: 14px/1 'roboto';
+                  font-weight: 100;
+                  color: #878787;
+                  display: inline-block;
+                  padding-left: 20px;
+                  padding-top: 8px;
+                  position: relative;
+                  &::before {
+                    content: '/';
+                    display: block;
+                    position: absolute;
+                    left: 5px;
+                  }
+                }
               }
-            }
-          }
-          > .sns {
-            width: 100%;
-            position: absolute;
-            bottom: -40px;
-            left: 13%;
-            > a {
-              width: 20px;
-              height: 20px;
-              cursor: pointer;
-              margin-right: 20px;
-              .i {
-                color: #b2b2b2;
-              }
-              &:hover .i {
-                color: #000;
+              > .sns {
+                width: 100%;
+                position: absolute;
+                bottom: -40px;
+                left: 13%;
+                > a {
+                  width: 20px;
+                  height: 20px;
+                  cursor: pointer;
+                  margin-right: 20px;
+                  .i {
+                    color: #b2b2b2;
+                  }
+                  &:hover .i {
+                    color: #000;
+                  }
+                }
               }
             }
           }
@@ -228,26 +285,26 @@
 @media screen and (max-width: $tablet) {
   .Department {
     width: 100%;
-    figure {
-      &::before {
-        width: 100%;
-        top: -130px;
-        text-align: center;
-        left: 0;
-      }
-      &::after {
-        width: 100%;
-
-        bottom: -100px;
-        text-align: center;
-        right: 0;
+    overflow: hidden;
+    &.on {
+      figure {
+        &::before {
+          left: -30%;
+        }
+        &::after {
+          right: -30%;
+        }
       }
     }
     > .inner {
-      .member_intro {
-        margin-top: 150px;
-        article {
-          width: 50%;
+      .department_scroll {
+        .member_intro {
+          margin-top: 150px;
+          .article_wrap {
+            article {
+              width: 50%;
+            }
+          }
         }
       }
     }
@@ -256,8 +313,24 @@
 
 @media screen and (max-width: $mobile) {
   .Department {
-    width: 100%;
-    padding: 0 10px;
+    padding: 0 20px;
+    &.on {
+      figure {
+        &::before {
+          text-align: center;
+          left: 50%;
+          transform: translateX(-50%);
+          transition-delay: 0.2s;
+          opacity: 1;
+        }
+        &::after {
+          right: 50%;
+          transform: translateX(75%);
+          transition-delay: 0.4s;
+          opacity: 1;
+        }
+      }
+    }
     figure {
       width: 100%;
       height: 220px;
@@ -265,38 +338,45 @@
       &::before {
         font-size: 60px;
         top: -80px;
+        left: 0;
       }
       &::after {
+        width: 100%;
         font-size: 50px;
         bottom: -70px;
+        right: -50%;
       }
     }
     > .inner {
-      .intro_container {
-        .wrap {
-          width: 100%;
-          display: flex;
-          flex-wrap: wrap;
-          position: relative;
-          .item {
+      .department_scroll {
+        .intro_container {
+          .wrap {
             width: 100%;
-            padding: 100px 0 50px 0;
-            span {
-              top: 50%;
-              right: 0;
-              transform: translateY(-50%);
+            display: flex;
+            flex-wrap: wrap;
+            position: relative;
+            .item {
+              width: 100%;
+              padding: 100px 0 50px 0;
+              span {
+                top: 50%;
+                right: 0;
+                transform: translateY(-50%);
+              }
             }
           }
         }
-      }
-      .member_intro {
-        margin-top: 50px;
-        > h2 {
-          font-size: 35px;
-        }
-        article {
-          width: 100%;
-          margin-bottom: 40px;
+        .member_intro {
+          margin-top: 50px;
+          > h2 {
+            font-size: 35px;
+          }
+          .article_wrap {
+            article {
+              width: 100%;
+              margin-bottom: 40px;
+            }
+          }
         }
       }
     }
