--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -1,156 +1,157 @@
 footer {
-  width: 100%;
-  background-color: #bbb;
-  padding: 30px 0;
-  .inner {
-    width: 1180px;
-    margin: 0px auto;
-    position: relative;
-    .footer_txt {
-      width: 100%;
-      position: relative;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      .company {
-        width: 40%;
-        position: relative;
-        img {
-          width: 45%;
-          margin-bottom: 30px;
-        }
-        p {
-          font: 14px/1.5 'noto sans';
-          font-weight: 100;
-          color: #383838;
-        }
-      }
-      > .contact {
-        width: 20%;
-        h2 {
-          font: 20px/1.2 'noto sans';
-          font-weight: 400;
-          color: #383838;
-          letter-spacing: 2px;
-          margin-bottom: 10px;
-        }
-        div {
-          font: 14px/1.3 'noto sans';
-          font-weight: 100;
-          color: #383838;
-          margin-bottom: 10px;
-        }
-      }
-      > .sns {
-        width: 20%;
-        h2 {
-          font: 20px/1.2 'noto sans';
-          font-weight: 400;
-          color: #383838;
-          letter-spacing: 2px;
-          margin-bottom: 10px;
-        }
-        p {
-          font: 14px/1.3 'noto sans';
-          font-weight: 100;
-          color: #383838;
-          margin-bottom: 20px;
-        }
-        a {
-          display: inline-block;
-          margin-right: 10px;
-          width: 35px;
-          height: 35px;
-          // padding: 10px;
-          border: 1px solid #383838;
-          border-radius: 50%;
-          position: relative;
-          .i {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 15px;
-            color: #383838;
-          }
-          &:hover {
-            background-color: #383838;
-            .i {
-              color: #bbb;
-            }
-          }
-        }
-      }
-      &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 1px;
-        background: rgba(56, 56, 56, 0.3);
-        margin-top: 20px;
-      }
-    }
-    > p {
-      font: 14px/1.3 'roboto';
-      font-weight: 100;
-      color: #383838;
-      margin-bottom: 20px;
-      text-align: center;
-      margin-top: 30px;
-    }
-  }
+	width: 100%;
+	background-color: rgb(243, 243, 243);
+	padding: 70px 0 30px;
+	border-top: 1px solid #ddd;
+	.inner {
+		width: 1180px;
+		margin: 0px auto;
+		position: relative;
+		.footer_txt {
+			width: 100%;
+			position: relative;
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			.company {
+				width: 40%;
+				position: relative;
+				img {
+					width: 45%;
+					margin-bottom: 30px;
+				}
+				p {
+					font: 14px/1.5 'arial';
+					font-weight: 100;
+					color: #bbb;
+				}
+			}
+			> .contact {
+				width: 20%;
+				h2 {
+					font: 20px/1.2 'arial';
+					font-weight: 400;
+					color: #383838;
+					letter-spacing: 2px;
+					margin-bottom: 25px;
+				}
+				div {
+					font: 12px/1.3 'arial';
+					color: #bbb;
+					margin-bottom: 20px;
+				}
+			}
+			> .sns {
+				width: 20%;
+				h2 {
+					font: 20px/1.2 'noto sans';
+					font-weight: 400;
+					color: #383838;
+					letter-spacing: 2px;
+					margin-bottom: 25px;
+				}
+				p {
+					font: 14px/1.3 'arial';
+					font-weight: 100;
+					color: #bbb;
+					margin-bottom: 20px;
+				}
+				a {
+					display: inline-block;
+					margin-right: 10px;
+					width: 35px;
+					height: 35px;
+					// padding: 10px;
+					border: 1px solid #383838;
+					border-radius: 50%;
+					position: relative;
+					.i {
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						transform: translate(-50%, -50%);
+						font-size: 15px;
+						color: #383838;
+					}
+					&:hover {
+						background-color: #383838;
+						.i {
+							color: #bbb;
+						}
+					}
+				}
+			}
+			&::after {
+				content: '';
+				display: block;
+				width: 100%;
+				height: 1px;
+				background: rgba(56, 56, 56, 0.3);
+				margin-top: 20px;
+			}
+		}
+		> p {
+			font: 12px/1.3 'arial';
+			font-weight: 100;
+			letter-spacing: 1px;
+			color: #666;
+			margin-bottom: 20px;
+			text-align: left;
+			margin-top: 30px;
+		}
+	}
 }
 
 @media screen and (max-width: $tablet) {
-  footer {
-    padding: 30px 2vw;
-    .inner {
-      width: 100%;
-    }
-  }
+	footer {
+		padding: 30px 2vw;
+		.inner {
+			width: 100%;
+		}
+	}
 }
 
 @media screen and (max-width: $mobile) {
-  footer {
-    .inner {
-      .footer_txt {
-        .company {
-          width: 100%;
-          margin-bottom: 20px;
-          img {
-            width: 70%;
-            margin-bottom: 10px;
-          }
-          p {
-            font: 12px/1.5 'noto sans';
-            font-weight: 100;
-            text-align: center;
-          }
-        }
-        > .contact {
-          display: none;
-        }
-        > .sns {
-          width: 100%;
-          h2 {
-            font: 16px/1.2 'noto sans';
-            text-align: center;
-          }
-          p {
-            display: none;
-          }
-          .sns_set {
-            display: flex;
-            justify-content: center;
-          }
-        }
-      }
-      > p {
-        font: 12px/1.3 'roboto';
-        margin-bottom: 0;
-        text-align: center;
-        margin-top: 20px;
-      }
-    }
-  }
+	footer {
+		.inner {
+			.footer_txt {
+				.company {
+					width: 100%;
+					margin-bottom: 20px;
+					img {
+						width: 70%;
+						margin-bottom: 10px;
+					}
+					p {
+						font: 12px/1.5 'noto sans';
+						font-weight: 100;
+						text-align: center;
+					}
+				}
+				> .contact {
+					display: none;
+				}
+				> .sns {
+					width: 100%;
+					h2 {
+						font: 16px/1.2 'noto sans';
+						text-align: center;
+					}
+					p {
+						display: none;
+					}
+					.sns_set {
+						display: flex;
+						justify-content: center;
+					}
+				}
+			}
+			> p {
+				font: 12px/1.3 'roboto';
+				margin-bottom: 0;
+				text-align: center;
+				margin-top: 20px;
+			}
+		}
+	}
 }
