--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -22,7 +22,6 @@
     li {
       width: 100%;
       cursor: pointer;
-      transition: 1s;
       overflow: hidden;
       transform: translateY(100px);
       opacity: 0;
@@ -47,10 +46,16 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: 0.5s;
+        transform: scale(1);
+        filter: brightness(1);
+        display: block;
       }
-      :hover {
-        transform: scale(1.05);
-        filter: brightness(0.8);
+      &:hover {
+        img {
+          transform: scale(1.2);
+          filter: brightness(0.8);
+        }
       }
     }
   }
