--- a/src/scss/main/_Ad.scss
+++ b/src/scss/main/_Ad.scss
@@ -1,109 +1,112 @@
 #ad {
-	width: 100%;
-	min-height: 100vh;
-	background: #fff;
-	position: relative;
-	padding: 10vh 5vw;
-	h1 {
-		display: block;
-		width: 100%;
-		text-align: center;
-		margin-bottom: 70px;
-		font: 40px/1 'playfair display';
-		font-weight: 400;
-		color: #222;
-	}
-	.video {
-		width: 100%;
-		height: 50vh;
-		position: relative;
+  width: 100%;
+  min-height: 100vh;
+  background: #fff;
+  position: relative;
+  padding: 10vh 5vw;
+  h1 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
+    color: #222;
+  }
+  .video {
+    width: 100%;
+    height: 50vh;
+    position: relative;
 
-		video {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-		.txt {
-			width: 50%;
-			height: 100px;
-			background: #fff;
-			position: absolute;
-			bottom: -10px;
-			right: -3px;
-			z-index: 3;
-			padding: 20px 40px;
-			.inner {
-				border-left: 4px solid #555;
-				padding-left: 20px;
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .txt {
+      width: 50%;
+      height: 100px;
+      background: #fff;
+      position: absolute;
+      bottom: -10px;
+      right: -3px;
+      z-index: 3;
+      padding: 20px 40px;
+      .inner {
+        border-left: 4px solid #555;
+        padding-left: 20px;
 
-				h2 {
-					color: #333;
-					margin-bottom: 5px;
-				}
-				p {
-					font: 14px/1.2 'arial';
-					color: #777;
-				}
-			}
-		}
-	}
+        h2 {
+          color: #333;
+          margin-bottom: 5px;
+        }
+        p {
+          font: 14px/1.2 'arial';
+          color: #777;
+        }
+      }
+    }
+  }
 
-	.txtBox {
-		width: 100%;
-		display: flex;
-		justify-content: space-between;
-		margin-top: 100px;
+  .txtBox {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
 
-		> div {
-			width: 22%;
-			h2 {
-				font: bold 14px/1 'arial';
-				color: #555;
-				margin-bottom: 15px;
-				padding-bottom: 10px;
-				border-bottom: 1px solid #ccc;
-			}
-			.inner {
-				width: 80%;
-				p {
-					font: 12px/1.2 'arial';
-					color: #777;
-					margin-bottom: 10px;
-				}
-				ul {
-					font: 11px/1.2 'arial';
-					color: #333;
-				}
-			}
-		}
-	}
+    > div {
+      width: 22%;
+      h2 {
+        font: bold 14px/1 'arial';
+        color: #555;
+        margin-bottom: 15px;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #ccc;
+      }
+      .inner {
+        width: 80%;
+        p {
+          font: 12px/1.2 'arial';
+          color: #777;
+          margin-bottom: 10px;
+        }
+        ul {
+          font: 11px/1.2 'arial';
+          color: #333;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $tablet) {
-	#ad {
-		min-height: 60vh;
-		.video {
-			width: 100%;
-			height: 50vh;
-			video {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
-		}
-	}
+  #ad {
+    min-height: 60vh;
+    .video {
+      width: 100%;
+      height: 50vh;
+      video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $mobile) {
-	#ad {
-		padding: 5vh 5vw;
-		min-height: 50vh;
-		h1 {
-			font: 35px/1 'playfair display';
-		}
-		.video {
-			width: 100%;
-			height: 40vh;
-		}
-	}
+  #ad {
+    padding: 5vh 5vw;
+    min-height: 50vh;
+    h1 {
+      font: 35px/1 'playfair display';
+    }
+    .video {
+      width: 100%;
+      height: 40vh;
+      .txt {
+        display: none;
+      }
+    }
+  }
 }
