--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -1,161 +1,179 @@
 #news {
-	width: 100%;
-	min-height: 60vh;
-	//background: #fffef6;
-	background: #f2f0e3;
-	position: relative;
-	padding: 10vh 10vw;
+  width: 100%;
+  min-height: 60vh;
+  //background: #fffef6;
+  background: #f2f0e3;
+  position: relative;
+  padding: 10vh 10vw;
 
-	h1 {
-		display: block;
-		width: 100%;
-		text-align: center;
-		margin-bottom: 70px;
-		font: 40px/1 'playfair display';
-		font-weight: 400;
-		color: #222;
-	}
+  h1 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 70px;
+    font: 40px/1 'playfair display';
+    font-weight: 400;
+    color: #222;
+  }
 
-	article {
-		width: 100%;
-		display: flex;
-		flex-wrap: wrap;
-		position: relative;
-		> .member_intro {
-			width: 50%;
-			padding: 5vh 5vw 5vh 10vw;
-			text-align: right;
-			// background: lightblue;
-			position: relative;
-			&::after {
-				content: '';
-				display: block;
-				width: 1px;
-				height: calc(100% - 10vh);
-				background: #bbb;
-				position: absolute;
-				top: 5vh;
-				right: 0;
-			}
-			h2 {
-				font: 24px/1 'noto sans';
-				font-weight: 400;
-				color: #222;
-				margin-bottom: 5px;
-			}
-			h3 {
-				font: 20px/1 'noto sans';
-				font-weight: 400;
-				color: #222;
-				margin-bottom: 10px;
-			}
-			h4 {
-				font: 14px/1 'noto sans';
-				font-weight: 100;
-				color: #222;
-				margin-bottom: 10px;
-			}
-			p {
-				font: 14px/1.3 'roboto';
-				font-weight: 300;
-				color: #222;
-				margin-bottom: 20px;
-				transform: translateY(100px);
-				opacity: 0;
-				transition: 0.5s;
-			}
-			a {
-				font: 14px/1 'noto sans';
-				font-weight: 400;
-				color: #222;
-				padding: 5px 10px;
-				border-bottom: 1px solid #222;
-				transform: translateY(100px);
-				opacity: 0;
-				transition: 0.5s;
-			}
-			h2,
-			h3,
-			h4 {
-				transform: translateX(-50px);
-				opacity: 0;
-				transition: 0.3s;
-			}
-		}
-		> .pic {
-			width: 50%;
-			padding: 5vh 5vw;
-			img {
-				width: 300px;
-				height: 300px;
-				object-fit: cover;
-				border-radius: 50%;
-			}
-		}
-	}
+  article {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    > .member_intro {
+      width: 50%;
+      padding: 5vh 5vw 5vh 10vw;
+      text-align: right;
+      // background: lightblue;
+      position: relative;
+      z-index: 1;
+      &::after {
+        content: '';
+        display: block;
+        width: 1px;
+        height: calc(100% - 10vh);
+        background: #bbb;
+        position: absolute;
+        top: 5vh;
+        right: 0;
+      }
+      h2 {
+        font: 24px/1 'noto sans';
+        font-weight: 400;
+        color: #222;
+        margin-bottom: 5px;
+      }
+      h3 {
+        font: 20px/1 'noto sans';
+        font-weight: 400;
+        color: #222;
+        margin-bottom: 10px;
+      }
+      h4 {
+        font: 14px/1 'noto sans';
+        font-weight: 100;
+        color: #222;
+        margin-bottom: 10px;
+      }
+      p {
+        font: 14px/1.3 'roboto';
+        font-weight: 300;
+        color: #222;
+        margin-bottom: 20px;
+        transform: translateY(100px);
+        opacity: 0;
+        transition: 0.5s;
+      }
+      a {
+        font: 14px/1 'noto sans';
+        font-weight: 400;
+        color: #222;
+        padding: 5px 10px;
+        border-bottom: 1px solid #222;
+        transform: translateY(100px);
+        opacity: 0;
+        transition: 0.5s;
+      }
+      h2,
+      h3,
+      h4 {
+        transform: translateX(-50px);
+        opacity: 0;
+        transition: 0.3s;
+      }
+    }
+    > .pic {
+      width: 50%;
+      padding: 5vh 5vw;
+      z-index: 1;
+      img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+    }
+    .deco {
+      font: 150px/1 'arial';
+      color: rgba(255, 255, 255, 0.8);
+      position: absolute;
+      top: 25%;
+      left: -10%;
+      z-index: 0;
+    }
+    .deco2 {
+      font: 150px/1 'arial';
+      color: rgba(255, 255, 255, 0.8);
+      position: absolute;
+      bottom: 25%;
+      right: -10%;
+      z-index: 0;
+    }
+  }
 
-	&.on {
-		article {
-			> .member_intro {
-				h2,
-				h3,
-				h4 {
-					transform: translateX(0);
-					opacity: 1;
-				}
-				h3 {
-					transition-delay: 0.2s;
-				}
-				h4 {
-					transition-delay: 0.3s;
-				}
-				p {
-					transform: translateY(0);
-					opacity: 1;
-					transition-delay: 0.4s;
-				}
-				a {
-					transform: translateY(0);
-					opacity: 1;
-					transition-delay: 0.5s;
-				}
-			}
-		}
-	}
+  &.on {
+    article {
+      > .member_intro {
+        h2,
+        h3,
+        h4 {
+          transform: translateX(0);
+          opacity: 1;
+        }
+        h3 {
+          transition-delay: 0.2s;
+        }
+        h4 {
+          transition-delay: 0.3s;
+        }
+        p {
+          transform: translateY(0);
+          opacity: 1;
+          transition-delay: 0.4s;
+        }
+        a {
+          transform: translateY(0);
+          opacity: 1;
+          transition-delay: 0.5s;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: $mobile) {
-	#news {
-		padding: 5vh 5vw;
-		overflow: hidden;
-		h1 {
-			font: 35px/1 'playfair display';
-		}
+  #news {
+    padding: 5vh 5vw;
+    overflow: hidden;
+    h1 {
+      font: 35px/1 'playfair display';
+    }
 
-		article {
-			flex-direction: column-reverse;
-			align-content: center;
-			justify-content: center;
-			> .member_intro {
-				width: 100%;
-				padding: 5vh 9vw;
-				text-align: center;
-				&::after {
-					display: none;
-				}
-			}
-			> .pic {
-				width: 100%;
-				padding: 0;
-				img {
-					margin-left: 50%;
-					transform: translateX(-50%);
-					width: 300px;
-					height: 300px;
-					object-fit: cover;
-					border-radius: 50%;
-				}
-			}
-		}
-	}
+    article {
+      flex-direction: column-reverse;
+      align-content: center;
+      justify-content: center;
+      > .member_intro {
+        width: 100%;
+        padding: 5vh 9vw;
+        text-align: center;
+        &::after {
+          display: none;
+        }
+      }
+      > .pic {
+        width: 100%;
+        padding: 0;
+        img {
+          margin-left: 50%;
+          transform: translateX(-50%);
+          width: 300px;
+          height: 300px;
+          object-fit: cover;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
